2007-02-21  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4076]
	* io/ftw.c (ftw_startup): Handle special case of FTW_CHDIR in /.
	(open_dir_stream): Likewise.
	* io/Makefile (tests): Add bug-ftw5.
	io/bug-ftw5.c: New file.

	* nscd/hstcache.c (cache_addhst): Remove unnecessary conditional.
	* nscd/servicescache.c (cache_addserv): Likewise.

	* nscd/grpcache.c (cache_addgr): In case a record changed on
	refresh, adjust key_copy.

	[BZ #4074]
	* nscd/pwdcache.c (cache_addpw): In case a record changed on
	refresh, adjust key_copy.

	[BZ #4070]
	* stdio-common/printf_fp.c (___printf_fp): Handle a few more
	* stdio-common/tfformat.c (sprint_doubles): Some more tests.
	special cases.

2007-02-19  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/printf_fp.c (___printf_fp): Cleanups and minor
	optimization.

	* stdio-common/vfscanf.c: Small cleanups throughout.

2007-02-18  Ulrich Drepper  <drepper@redhat.com>

	[BZ #3325]
	* sysdeps/i386/fpu/e_fmodf.S: Use fprem1 instead of fprem.
	* sysdeps/i386/fpu/e_fmodl.c: Likewise.
	* sysdeps/i386/fpu/e_fmod.S: Likewise.
	Patch by Jared Casper <jaredcasper@gmail.com>.

	* sysdeps/unix/closedir.c: Outside libc don't use locking.
	* sysdeps/unix/opendir.c: Likewise.
	* sysdeps/unix/readdir.c: Likewise.

	[BZ #2211]
	* stdio-common/vfscanf.c: Handle localized digits etc for floating
	point numbers.
	Patch mostly by Hamed Malek <hamed@farsiweb.info>.

	* stdio-common/vfscanf.c: Fix problems in width accounting.
	* stdio-common/tst-sscanf.c (double_tests): New tests.
	(main): Hook them up.

	* stdio-common/vfscanf.c: Remove unused WIDTH handling.
	More simplifications of floating-point reader.

	* stdio-common/Makefile (tests): Add tst-swscanf.
	* stdio-common/tst-sscanf.c: Make tests usable for swscanf
	testing.
	* stdio-common/tst-swscanf.c: New file.

2007-02-17  Ulrich Drepper  <drepper@redhat.com>

	[BZ #2633]
	* libio/stdio.h: Define struct _IO_FILE in global namespace.